src/objects/FieloPLT__Tracker__c.object
<CustomObject>
    <description>Internal object. It is generated as a result of processing a Challenge Action.</description>
    <fields>
        <fullName>FieloPLT__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It makes reference to the Action object.</description>
        <inlineHelpText>It makes reference to the Action object.</inlineHelpText>
        <label>Action</label>
        <referenceTo>FieloPLT__Action__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Tracker</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <description>It evaluates the Initial and Final Date from the Challenge.</description>
        <inlineHelpText>It evaluates the Initial and Final Date from the Challenge.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event which generates the Tracker.</description>
        <inlineHelpText>Event which generates the Tracker.</inlineHelpText>
        <label>Event</label>
        <referenceTo>FieloPLT__Event__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, it shows that Tracker is processed offline.</description>
        <inlineHelpText>If ticked, it shows that Tracker is processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, Tracker is processed. Depending on the other Challenge settings and status, several related processes may be triggered.</description>
        <inlineHelpText>If ticked, Tracker is processed.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsReverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, Tracker is reverted thus Points are returned to the Member.</description>
        <inlineHelpText>If ticked, Tracker is reverted thus Points are returned to the Member.</inlineHelpText>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Member who performed the Action generating the Tracker.</description>
        <inlineHelpText>Member who performed the Action generating the Tracker.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MissionMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows which Member and Mission the Tracker belongs to.</description>
        <inlineHelpText>It shows which Member and Mission the Tracker belongs to.</inlineHelpText>
        <label>Mission Member</label>
        <referenceTo>FieloPLT__MissionMember__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModuleResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Response</label>
        <referenceTo>ModuleResponse__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tracker</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>